--- a/subdir1/index.html
+++ b/subdir1/index.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         <h1 class="head1">This is a test file for git</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est mollitia, voluptates laudantium fuga labore, quibusdam officiis temporibus sapiente voluptas, optio assumenda. Eveniet error suscipit nobis sit neque quo magni veniam?</p>
     </body>
 </html>
